--- a/package.json
+++ b/package.json
@@ -13,23 +13,22 @@
     "@supabase/supabase-js": "^2.76.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.546.0",
-    "next": "15.5.6",
+    "next": "^16.1.6",
+    "nodemailer": "^6.9.8",
     "papaparse": "^5.5.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "recharts": "^3.3.0",
-    "xlsx": "^0.18.5",
-    "nodemailer": "^6.9.8"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-  "@tailwindcss/postcss": "^4",
-  "@types/node": "^20",
-  "@types/papaparse": "^5.3.16",
-  "@types/react": "^19",
-  "@types/react-dom": "^19",
-  "@types/nodemailer": "^6.4.13",
-  "tailwindcss": "^4",
-  "typescript": "^5"
-}
-
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/nodemailer": "^6.4.13",
+    "@types/papaparse": "^5.3.16",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "tailwindcss": "^4",
+    "typescript": "^5"
+  }
 }
